# mpvasync

./: .gitignore  README.md  mpv-cli.py  mpvasync.py  mypy.ini  noxfile.py  pyproject.toml  test_mpvasync.py
.github/workflows/: test.yaml
src/: mpvasync.py
tests/: test_mpvasync.py
