[project]
name = "mpvasync"
version = "0.1.0"
authors = [
  { name="Fiona Klute", email="fiona.klute@gmx.de" },
]
description = "mpv IPC socket client based on asyncio"
license = { text="MIT" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia",
    "Framework :: AsyncIO",
]

[project.optional-dependencies]
argcomplete = [
    'argcomplete',
]
tests = [
    'pytest',
    'pytest-asyncio',
    'pytest-cov',
]

[project.urls]
"Homepage" = "https://github.com/airtower-luna/mpvasync"
"Bug Tracker" = "https://github.com/airtower-luna/mpvasync/issues"

[project.scripts]
"mpvasync" = "mpvasync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
check_untyped_defs = true
exclude = [
    '^noxfile\.py$',
]

[[tool.mypy.overrides]]
module = [
    'pytest',
    'pytest_asyncio',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope = 'session'
pythonpath = 'src'
testpaths = ['tests']
addopts = ['--import-mode=importlib']

[tool.hatch.build.targets.wheel]
packages = ['src/mpvasync.py']

[tool.coverage.run]
source = [
    'mpvasync',
    'tests',
]

[tool.coverage.paths]
source = [
    'src/',
    '.nox/test-*/lib/python*/site-packages/',
]
